# rust-desktop-app

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: app.rs  data.rs  export.rs  main.rs  updater.rs
