[package]
name = "desktop-app"
version = "0.4.3"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rust_xlsxwriter = "0.64"
self_update = { version = "0.39", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
env_logger = "0.11.8"
egui_extras = "0.31.1"
fastrand = "2.3.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Configure the binary to not show console
[[bin]]
name = "desktop-app"
path = "src/main.rs"

[package.metadata.bundle]
name = "Desktop Application"
identifier = "com.yourcompany.desktop-app"
version = "0.4.2"

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1